--- a/references.bib
+++ b/references.bib
@@ -161,6 +161,21 @@ url="https://doi.org/10.4404/hystrix-25.1-9437"
   volume={41},
   number={2},
   pages={217--225},
-  year={2018}
+  year={2018},
+  url="https://doi.org/10.32800/abc.2018.41.0217"
 }
 
+@article{Fernández-López_2024,
+author = {Fernández-López, Javier and Acevedo, Pelayo and Illanas, Sonia and Blanco-Aguiar, Jose Antonio and Vicente, Joaquín and Gimenez, Olivier},
+title = {Game target-group: Implementing inhomogeneous Poisson point process to estimate animal abundance from harvest data},
+journal = {Methods in Ecology and Evolution},
+volume = {In press},
+number = {In press},
+pages = {},
+keywords = {Bayesian hierarchical modelling, hunting yields, Iberian hare, mammals, red fox, roe deer, wild boar, wildlife monitoring},
+doi = {https://doi.org/10.1111/2041-210X.14458},
+url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.14458},
+eprint = {https://besjournals.onlinelibrary.wiley.com/doi/pdf/10.1111/2041-210X.14458},
+abstract = {Abstract Harvest data have the potential to be used as an abundance index due to its widespread availability and long-term collection across large geographical areas. However, challenges such as the lack of hunting effort information, varying data resolutions and reporting biases hinder its direct use as an abundance proxy. Here, we present the game target-group, a statistical approach based on a thinned inhomogeneous Poisson point process, to estimate animal abundance at fine-scale resolution from hunting data. We employ a Bayesian hierarchical framework to borrow information from harvest data on related species to overcome issues due to the lack of hunting management information. We conducted a simulation study to explore model performance and parameter identifiability under different scenarios (sample size, species catchability/abundance and unmodelled heterogeneity) and assessed the method on a real case study with four species in central Spain. The simulation study confirmed that with a large enough sample size (n > 5000), high catchability and lack of unmodelled heterogeneity in the abundance process, the model was able to obtain unbiased estimations for total abundance parameters. In the case study, our model successfully captured species-habitat relationships and produced reliable estimates of total abundance at regional scale. Internal validation with independent test data and external validation with fieldwork data confirmed the model's ability to predict hunting yields and estimate species total abundance accurately. Our approach provides a flexible and valuable tool for large-scale monitoring programs relying on harvest data with potential applications in wildlife management and conservation. However, the method should be applied with caution when there is unmodelled heterogeneity, low catchability or the sample size is small (<5000).},
+year={2024}
+}
