--- a/docs/tutorials/gistredo.Rmd
+++ b/docs/tutorials/gistredo.Rmd
@@ -19,6 +19,8 @@ text-align: justify}
 </style>
 
 <br/>
+<p align="center">
+<img height=292 width=500 src="gistredo_images/Figura2_uro.png"> </a>
 </p>
 <font size="3">
 <br/>
